# Tilze

./: .gitignore  CMakeLists.txt  README.md  gempyre.conf  test.txt  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt
gui/: ui.html
include/: animator.h  autoplay.h  cube.h  game.h  gameenv.h  gameobserver.h  sparseiterator.h  table.h  tilze.h  tilzeobserver.h  ui_resource.h  view.h
src/: animator.cpp  autoplay.cpp  cube.cpp  game.cpp  gameenv.cpp  main.cpp  tilze.cpp  tilzeobserver.cpp  view.cpp
